Start using template instead of creating xml from scratch